Fix compilation issues